# MDSubSampler

./: .gitignore  ClassSampler_Norm.py  Density_plots_traj_5.R  Dockerfile  Fit_Trajactory_class.py  MDSS_Protein_Sampler.py  Protein_Sampler.py  Protein_traj.py  README.md  RMSD_Analysis.py  RMSD_test_1.py  ReadFile_MD.py  ReadFile_MDClass  ReadFile_MDClass.ipynb  SAMPLE1.INI  bhatt_distance.py  build-docker  create-docker  mdss.py  mdss_dissimilarity.py  mdss_distance.py  mdss_distribution.py  mdss_geometrical_property.py  mdss_graph.py  mdss_logging.py  mdss_parser.py  mdss_pca_property.py  mdss_property.py  mdss_protein_data.py  mdss_protein_sampler.py  mdss_sampler.py  mdss_scenario.py  mdss_scenario_001.py  mdss_scenario_001.sh  mdss_scenario_002.py  mdss_scenario_1.py  mdss_scenario_2.py  mdss_scenario_3.py  mdss_utilities.py  norm.py  (+11 more)
cookbook/: advanced_scenario_1.ipynb  advanced_scenario_2.ipynb  machine_learning_prediction.ipynb  subsampling_and_property_comparison.ipynb  two_stage_subsampling.ipynb
data/: .user.xtc_offsets.npz  ApoADK_protein_05_G55-P127.xvg  MD_4AKEA_protein.gro  input.gro  input.xtc  user.gro
logs/: log_2022_10_07_10_14_18.txt
mdss/: dissimilarity.py  geometrical_property.py  graph.py  log_setup.py  logging.py  parser.py  pca_property.py  property.py  protein_data.py  run.py  sampler.py  utilities.py
scenarios/: mdss_scenario_001.py  mdss_scenario_001.sh  mdss_scenario_001_list.py  mdss_scenario_002.py  mdss_scenario_003.py  scenario_1.py  scenario_2.py  scenario_3.py
scripts/: R_script_plots_RMSD.R  run_scenario.sh  scenario_1.sh  scenario_list.py
tests/: conftest.py  mdss_dissimilarity_test.py  mdss_geometrical_property_test.py  mdss_parser_test.py  test.py  (+5 more)
(+15 files in other folders)
