[tool.poetry]
name = "mdsubsampler"
version = "0.0.5"
description = ""
authors = ["Namir Oues <namir.oues@brunel.ac.uk>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "mdss" },
]

[tool.poetry.dependencies]
python = "^3.9"
dictances = "1.5.3"
matplotlib = "^3.6.2"
MDAnalysis = "2.1.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
psutil = "^5.9.4"
scikit-learn = "^1.2.2"
setuptools = "^69.0.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mdss = "mdss.run:run"
mdss_scenario_1 = "mdss.scenarios.scenario_1:run"
mdss_scenario_2 = "mdss.scenarios.scenario_2:run"
mdss_scenario_3 = "mdss.scenarios.scenario_3:run"



